@@ -1,3 +1,4 @@
+
 package com.lyj.securitydomo.service;
 
 import com.lyj.securitydomo.dto.PageRequestDTO;
@@ -11,11 +12,11 @@ import lombok.extern.log4j.Log4j2;
 import org.modelmapper.ModelMapper;
 import org.springframework.data.domain.Page;
 import org.springframework.stereotype.Service;
+
 import org.springframework.data.domain.Pageable;
 import java.util.List;
 import java.util.Optional;
 import java.util.stream.Collectors;
-import java.util.Arrays;
 
 @Service
 @Log4j2
@@ -25,18 +26,13 @@ public class PostServiceImpl implements PostService {
     private final ModelMapper modelMapper;
     private final PostRepository postRepository;
 
-    @Override
-    public List<PostDTO> getAllPosts() {
-        List<Post> posts = postRepository.findAll();
-        return posts.stream()
-                .map(post -> modelMapper.map(post, PostDTO.class))
-                .collect(Collectors.toList());
-    }
 
     @Override
     public Long register(PostDTO postDTO) {
-        Post post = modelMapper.map(postDTO, Post.class);
+//        Post post = modelMapper.map(postDTO, Post.class);
+        Post post = dtoToEntity(postDTO);
         Long postId = postRepository.save(post).getPostId();
+
         return postId;
     }
 
@@ -44,7 +40,10 @@ public class PostServiceImpl implements PostService {
     public PostDTO readOne(Long postId) {
         Optional<Post> result = postRepository.findById(postId);
         Post post = result.orElseThrow();
-        PostDTO postDTO = modelMapper.map(post, PostDTO.class);
+
+//        PostDTO postDTO = modelMapper.map(post, PostDTO.class);
+        PostDTO postDTO = entityToDTO(post);
+
         return postDTO;
     }
 
@@ -52,37 +51,44 @@ public class PostServiceImpl implements PostService {
     public void modify(PostDTO postDTO) {
         Optional<Post> result = postRepository.findById(postDTO.getPostId());
         Post post = result.orElseThrow();
-        post.change(postDTO.getTitle(), postDTO.getContentText());
+
+        post.change(postDTO.getTitle(),postDTO.getContentText());
+        post.clearAllImages();
+
+        if(postDTO.getFileNames() !=null){
+            for (String fileName : postDTO.getFileNames()) {
+                String[] split = fileName.split("_");
+                post.addImage(split[0], split[1]);
+            }
+        }
+
         postRepository.save(post);
+
     }
 
     @Override
     public void remove(Long postId) {
         postRepository.deleteById(postId);
+
     }
 
     @Override
     public PageResponseDTO<PostDTO> list(PageRequestDTO pageRequestDTO) {
-        String[] types = pageRequestDTO.getTypes() != null ? pageRequestDTO.getTypes() : new String[0];
+
+        String[] types = pageRequestDTO.getTypes();
         String keyword = pageRequestDTO.getKeyword();
         Pageable pageable = pageRequestDTO.getPageable("postId");
 
-        Page<Post> result = postRepository.searchAll(Arrays.asList(types), keyword, pageable);
+        Page<Post> result = postRepository.searchAll(List.of(types),keyword,pageable);
 
         List<PostDTO> dtoList = result.getContent().stream()
-                .map(post -> modelMapper.map(post, PostDTO.class))
-                .collect(Collectors.toList());
+                .map(post -> modelMapper.map(post,PostDTO.class)).collect(Collectors.toList());
 
-        if (dtoList.isEmpty()) {
-            log.info("dtoList is empty.");
-        } else {
-            log.info("dtoList: {}", dtoList);
-        }
 
         return PageResponseDTO.<PostDTO>withAll()
                 .pageRequestDTO(pageRequestDTO)
                 .dtoList(dtoList)
-                .total((int) result.getTotalElements())
+                .total((int)result.getTotalElements())
                 .build();
     }
 
